added /create to f

--- a/views/show.erb
+++ b/views/show.erb
@@ -1,5 +1,9 @@
 
-
+<% if flash[:message] %>
+   <div class="alert alert-danger">
+     <%= flash[:message] %>  
+   </div>
+<% end %>
 
 <div class="alert alert-warning">
   <p class="lead">
